--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
+    <script src="https://kit.fontawesome.com/0a170c1603.js" crossorigin="anonymous"></script>
+  
   </head>
   <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -24,7 +26,6 @@
           </li>
         </ul>
       </nav>
-
       <div class="banner">
         <div class="banner-content">
           <h4 class="banner-greetings dark-2">Hi, I am</h4>
@@ -33,8 +34,8 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-primary">Contact</button>
+          <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-primary"> <i class="fa-solid fa-phone"></i>  Contact</button>
         </div>
         <img class="banner-profile-pic" src="images/hardy.png" alt="" />
       </div>
